syntax = "proto3";
package CW;

enum PacketID			//消息大类型
{
	//-------------------------客户端消息大类型--------------------------------
		LOGIN_PROTOCOL = 0;
}	

enum PacketID2				//消息小类型，因为枚举不可重复，按消息大类型*100+小类型依次排
{	
	//-------------------------消息小类型--------------------------------
	//gw处理的消息
		LOGIN_KEY					=	0;						//获取密钥    
		LOGIN_LOGIN					=	3;          //登陆        
}

message PacketHeader
{			
	 PacketID		id1	=	1 ;	
	 PacketID2	id2	=	2 ;		
}

enum ret_error_code
{	    
		ERROR_NONE			=		0;			//成功
		
		ERROR_LOGIN_WRONG_USERNAME	=		1;     //用户名密码错                
		ERROR_LOGIN_ALREADY_LOGIN		=		2;     //已登陆，踢掉了前任          
		ERROR_LOGIN_WRONG_VERSION		=		3;     //版本号错误                  
		ERROR_LOGIN_BANID						=		4;     //封停账号                    
		ERROR_LOGIN_BANIP						=		5;     //封停IP                      
		ERROR_LOGIN_NO_SERVER				=		6;     //服务器维护中，请稍后     
		ERROR_LOGIN_NOT_JINGYING		=		7;		//不是经营测试服玩家 

		ERROR_UNKNOW										=	2000;			//其他错误	
}